--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -58,3 +58,19 @@ footer {
   bottom: 0;
   width: 100%;
 }
+
+input[type="text"]:focus,
+input[type="email"]:focus,
+select:focus,
+input[type="radio"]:focus,
+input[type="date"]:focus {
+  outline: 2px solid #005fcc;  
+  border: 2px solid #005fcc;  
+  background-color: #f0f8ff;   
+}
+
+button:focus {
+  outline: 2px solid #005fcc;  
+
+  background-color: rgb(228, 132, 6);
+}
