--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -8,7 +8,8 @@ body {
     align-items: center;
     height: 100vh;
     align-content: center;
-
+    display:flex;
+    flex-direction: column;
   }
   
   .order-form {
@@ -23,10 +24,8 @@ body {
 
  .form-group {
     background:hsl(197, 100%, 50%);
-    padding-bottom: 10px;
-    padding-top:  10px;
-    padding-left: 10px;
-    padding-right: 10px;
+   
+    padding:10px;
   }
 
   
@@ -74,6 +73,6 @@ body {
     cursor: pointer;
   }
   
-  .form-group button:hover {
+  button:hover,button:focus {
     background-color: #218838;
   }
