--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -37,8 +37,8 @@ main {
     
 }
 
-/* Main article */
-.main-article {
+.articles:first-child {
+    width: 100vw;
     background-color: #333533;
     color: #f4f4f4;
     padding: 0;
@@ -48,6 +48,7 @@ main {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     border: 3px solid #f5cb5c;
 }
+
 
 .main-article img {
     width: 100%;  
