--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -1,16 +1,12 @@
-* {
-    box-sizing: border-box;
-}
 
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
     background-color: #ad5353;
     padding: 50px;
-}
-
-
-a{
+    margin: 0 auto; 
+  }
+  a {
     padding: 4px;
     background-color: #333;
     font-weight: bold;
@@ -24,75 +20,69 @@ a:hover{
     color: hsl(0, 98%, 100%);
     text-decoration: underline;
 }
-
-header {
-    text-align: center;
-    background-color: #333;
-    color: #fff;
-    padding: 20px 0;
-    margin-bottom: 20px;
-}
-
-.article2-article3{
-    display: flex;
-    justify-content: space-around;
-    gap: 20px;
-    flex: 1;
-}
-
-#why-developers-need-git {
-min-width: 45%;
-flex: 1;
-}
-
-#what-is-branch {
-    min-width: 45%;
-    flex: 1; 
-}
-
-/* h1 {
-    font-size: 2.5em;
-}
-
-.content {
-    max-width: 800px;
+  
+ 
+  header {
+    width: 80vw;
     margin: 0 auto;
-    background-color: #fff;
-    padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    background-color: rgba(27, 1, 8, 0.39);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  
+  .main-top {
+    max-width: 100%;
+    margin: 0 auto;
+    border-bottom: 1px solid black;
+   
+  }
+  
+  .main-bottom {
+    display: flex;
+    justify-content: space-between;
+    gap: 26px;
+    padding: 27px 0 40px 0;
+    border-bottom: 1px solid black;
+  }
+  
+  .main-bottom article {
+    width: 48%; 
+    box-sizing: border-box; 
+  }
+      body, header, .main-top, .main-bottom article {
+    padding: 16px;
+  }
+
+  article {
+    border:1px solid black;
+    border-bottom: 20px;
+  } 
+
+  footer {
+    width:100vw;
+    padding:10px;
+    background-color: #111;
+    position:fixed;
+    bottom:0;
+    left:0;
+    text-align:center;
+    color:#fff;
+
 }
 
-.section {
-    margin-bottom: 20px;
-}
+  div p:first-child {
+    color: blue;
+    font-weight: bold;
+  }
 
-h2 {
-    font-size: 1.8em;
-    color: #333;
-    margin-bottom: 10px;
-}
-
-p {
-    font-size: 1.1em;
-    color: #666;
-}
-
-ul {
-    margin-top: 10px;
-}
-
-ul li {
-    margin: 10px 0;
-    font-size: 1.1em;
-}
-
-strong {
-    color: #333;
-} */
-article {
-    border: 1px black solid;
-}
-#article1 {
-  margin-top: 20px;
-  margin-bottom: 20px;  
-}
+  img  {
+    width: 45vw;
+    height: 300px;
+    margin: 0 auto;
+    display: block;
+        
+  }
+  
