--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color:blueviolet;
+    background-color:orange;
     font-family:'Courier New', Courier, monospace;
     margin: 0;
     padding: 0;
