--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -5,9 +5,9 @@ body {
   text-align: center;
   margin: 14rem;
   padding: 8rem;
-  box-sizing: border-box;
+
   font-family: "Work Sans", sans-serif;
-  font-optical-sizing: auto;
+
   font-style: normal;
   font-size: 1rem;
   background-image: url("https://images.unsplash.com/photo-1563291074-2bf8677ac0e5?q=80&w=1907&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
@@ -16,7 +16,7 @@ body {
 html,
 body {
   height: 100%;
-  margin: 0rem;
+  margin: 0;
 }
 
 form {
@@ -37,26 +37,25 @@ form {
 }
 
 .user-input {
-  padding: 0.8rem 1rem;
   margin: 1.5rem 0;
   border-radius: 4px;
   outline: none;
   width: 100%;
   max-width: 400px;
-  box-sizing: border-box;
+
   line-height: 5.5;
 }
 
 .submit {
-  padding: 1rem;
-  width: 7rem;
+  padding: 16px;
+
   border-radius: 5px;
   color: white;
   background-color: #c9184a;
-  border: #c9184a;
+  border: none;
   font-weight: 800;
-  box-shadow: #c9184a 0px 2px 8px 0px;
-  position: absolute;
+  box-shadow: #c9184a 0 2px 8px 0;
+
   text-transform: uppercase;
   -webkit-animation-duration: 1s;
   animation-duration: 1s;
@@ -73,11 +72,6 @@ form {
   animation-name: bounce;
   -moz-animation-name: bounce;
 }
-.btn {
-  padding: 14%;
-  margin: 2rem;
-  width: 7rem;
-}
 
 .footer {
   position: static;
@@ -89,7 +83,7 @@ form {
 
 input:focus {
   border-color: #c9184a;
-  box-shadow: #c9184a 0px 2px 8px 0px;
+  box-shadow: #c9184a 0 2px 8px 0;
 }
 input {
   padding: 6px;
@@ -99,7 +93,7 @@ input {
 }
 
 @media (max-width: 480px) {
-  header h1 {
+  header {
     font-size: 1.5em;
     text-align: center;
   }
@@ -110,11 +104,6 @@ input {
   .submit {
     display: block;
     margin: auto;
-  }
-
-  footer h2 {
-    font-size: 0.9em;
-    padding: 6px;
   }
 
   footer {
