I added css style for footer: display, justify-content, font-style, background, color

--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -99,3 +99,11 @@ h3{
    display: block;
    margin-top: 30px; 
 }
+/* Footer */
+.footer{
+    display: flex;
+    justify-content: center;
+    font-style: italic;
+    background: #f4511e;
+    color: white;
+}
