--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -1,187 +1,161 @@
 
 
-*{ 
-    text-decoration: none;
-
-}
-
-
 body{
-    display: flex;
     background-color:#e5e0e0;
     height: 100vh;
     width: 100;   
     
 }
 
-header{
-   
-    background-color:#0a0101;
-    width: 100%;
-    height: 100px;
-    
-
-}
-
-
-header nav ul{
-    display: block;
-    margin: 0 auto;
-    padding: 35px ;
-
-
-  
-
-}
-header nav ul li{
-    display: inline-block;
-    float: left;
-    list-style: none;
-    padding-left:20px;
-    margin: 16px;
-    
-
-}
-header nav ul li a{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 17px;
-    color: #ece3e3;
-}
-
-
-
-header nav ul a:hover {
-    color: red;
-}
-
-
 #index-h1 { 
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: 30px;
     font-weight: 600;
-    color: #111;
+    color: #9a9994;
     text-transform: uppercase;
-    display: block;
     margin: 0 auto;
     text-align: center;
     padding: 40px 0;
   
 
 }
+h1{
+    color:  #f14e32;
+    margin-left: 0px;
+}
+.first-p{
+    font-family: Arial, Helvetica, sans-serif;
+line-height: 30px;
+margin-left: 50px;
+color: #4e443c;
+    
+}
 
 #index-p{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 24px;
     font-weight: 400;
-    color: #111;
+    color: #4e443c;
     text-transform: inherit;
-    display: block;
     margin: 0 auto;
     text-align: center;
     padding: 50px 0;
 }
-h1{
-    color: rgb(15, 153, 59);
-    text-align: center;
-}
-
-
-
- .img-dog1{
-    display: inline-block;
-    width: 600px;
-
-  
-  
- }
- .dog1{
-    margin-left:100px ;
-    width: 550px;
-   
- }
-
-
-.img-dog2{
-    display: inline-block;
-
-    margin-left: 160px;
-    vertical-align: top;
-    width: 600px;
-  
-}
-
-   
-.img-dog :hover{
-    transform: scale(2,2);
-    transition: 0.4s;
+.git-logo{
+    display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 70px;
     
 }
-button{
-    padding:15px 30px;
-    background-color: white;
-    border-radius: 3px;
-    margin-left: 190px;
-  
-
+.git-info{
+    display: block;
+    width: 1400px;
+    margin-left: 30px;
+    
+}
+.image{
+    display: block;
+   text-align: center;
+    margin-top: 50px;
 
    
-
+}
+.first-p{
+    display:inline-block;
+  
+}
+h2{
+    color: #f14e32;
+    font-size: 40px;
+    margin-left: 30px;
 
 }
-button:hover{
-    background-color: gray;
+
+
+.p1{
+    display: inline-block;
+    width: 500px;
+    vertical-align: top;
+    margin: 50px 90px 90px;
+    margin-top: 100px;
+    color: #4e443c;
+
 }
+.p2{
+    display: inline-block;
+    width: 500px;
+    margin-left: 90px;
+    margin-top: 100px;
+    margin-right: 90px;
+    color: #4e443c;
+  
 
-
-section p{
-
+ 
+}
+.Paragraph{
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 27px;
-    font-weight: 500;
-    color: #111;
-    text-transform: inherit;
-    margin: 10px;
-    text-align: center;
-    padding: 5px;
+    line-height: 30px;
+    color: #4e443c;
 }
-.banner{
-    width: 100%;
-
-}
-
 .footer{
-   background-color:#0a0101;
-
-display: flex;
-justify-content: center;
-padding: 100px;
-margin-top: 90px;
+    text-align: center;
+   padding-top: 30px;
+   padding-bottom: 30px;
+   font-size: 30px;
+   color: #4e443c;
+   
+}
+span{
+    color:#0388a6; ;
+}
+span:hover{
+cursor: pointer;
+text-decoration: underline;
+}
+.links{
+    color: #0388a6;
+  text-decoration: none;
 }
 
-.footer a{
+ .footer-1{
+    display: flex;
+justify-content: center;
+padding: 10px;
+margin-top: 90px;
+ }
+
+ .footer-1 a{
     text-decoration: none;
     padding: 10px;
-    background-color: aliceblue;
     margin: 10px;
     border-radius: 50%;
    
 }
-.footer a i{
+.footer-1 a i{
+    
     font-size: 2em;
-    color: #0a0101;
+    color:  #9a9994;;
     opacity: 0.9;
 }
-.footer a:hover{
-    background-color: #0a0101;
+.footer-1 a:hover{
+    opacity: 0.4;
     transition: 0.5s;
 }
-.footer a:hover i{
-    color: white;
-    transition: 0.5;
-}
-.par1{
-  text-align: center;
-}
-.par2{
- display: inline-block;
-}
+    
+ 
+    .footer-1{
+        margin-top: 1px;
+    }
+    
+    .h3{
+        display: flex;
+        justify-content: right;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 24px;
+        font-weight: 400;
+        margin-right: 90px;
+        color: #9a9994;
+      
+    }
+    
