--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -1,8 +1,8 @@
 body{
     background-color:orange;
     font-family:'Courier New', Courier, monospace;
-    margin: 0;
-    padding: 0;
+    margin: 0rem;
+    padding: 0rem;
     display: flex;
     flex-direction: column;
     color: aliceblue;
@@ -10,7 +10,7 @@ body{
 }
 header h1{ 
 color: #000;
- padding: 20;
+ padding: 20rem;
 text-align: center;
 font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;    
 }
