--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -70,7 +70,10 @@ h1 {
     width: 100%;
     height: 25rem;
     background-size: cover;
-    background-repeat: no-repeat;
+    object-fit: cover; 
+    max-width: 100%;
+    max-height: 100%;
+
 }
 
 /*  ------------text style div ----------------*/
@@ -113,8 +116,12 @@ h1 {
 }
 
 .img-article {
-    width: 100%;
-    height: 25rem;
+
+  width: 100%;
+  height: auto; 
+  aspect-ratio: 16 / 9; 
+  object-fit: cover; 
+
 }
 
 
