--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -6,18 +6,19 @@
     --cyan-btn-hoover: hsl(173, 100%, 50%);
     --white: #ffffff;
     --black: #0f0a0a;
-    --primary-purple-dark: #4a54c4; /* Darker shade for better contrast */
+    --primary-purple-dark: #4a54c4;
+    /* Darker shade for better contrast */
     --titles-purple-bright: #0008ff;
     --text-light: #ffffff;
     --text-dark: #000000;
-    --background-light: #dbdadd; 
+    --background-light: #dbdadd;
     --background-overlay-blue: rgba(127, 176, 255, 0.265);
     --font-main: 'Kalnia', sans-serif;
     --font-secondary: 'Sixtyfour Convergence', sans-serif;
     --cyan-border-boxes: 4px solid rgb(3, 242, 218);
-   
+
 }
-  
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -68,9 +69,11 @@ h1 {
 
 .img-hero {
     width: 100%;
-    height: 25rem;
-    background-size: cover;
-
+    height: auto;
+    aspect-ratio: auto;
+    /*respect the proportion of original gif*/
+    display: block;
+    margin: 0 auto;
 }
 
 /*  ------------text style div ----------------*/
@@ -114,10 +117,12 @@ h1 {
 
 .img-article {
 
-  width: 100%;
-  height: auto; 
-  aspect-ratio: 16 / 9; 
-  object-fit: cover; 
+    width: 100%;
+    height: auto;
+    aspect-ratio: 16 / 9;
+    object-fit: cover;
+    display: block;
+    margin: 0 auto;
 
 }
 
@@ -142,7 +147,7 @@ h1 {
 }
 
 .button:hover {
-    background-color:var(--cyan-btn-hoover);
+    background-color: var(--cyan-btn-hoover);
     color: var(--black);
 }
 
@@ -257,12 +262,12 @@ footer p:hover {
 
     .hero {
         max-width: 1300px;
-        margin: 2rem auto; 
+        margin: 2rem auto;
         box-shadow: 0 5px 18px;
-       
+
     }
 
-    .wrapper{
+    .wrapper {
         max-width: 1300px;
         margin: 1rem auto;
         gap: 2rem;
@@ -276,8 +281,7 @@ footer p:hover {
 
     footer {
         max-width: 1300px;
-        margin: 2rem auto;     
+        margin: 2rem auto;
     }
 
 }
-
